--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-*.classpath
-*.project
 *.idea
 *.iml
-*libs/*
 
 *.class
 
@@ -10,7 +7,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+# *.jar
 *.war
 *.ear
 
